# DigiChamp

./: .env  .gitignore  README.md  db.sqlite3  full_data.json  manage.py  pyproject.toml  render.yaml  requirements.txt  try2.py
Backend/: .env  README.md  data.json  db.sqlite3  requirements.txt
Backend/backend/: settings.py  urls.py  wsgi.py
Backend/quiz/: ai_tutor.py  models.py  pop_app.py  serializers.py  urls.py  views.py
Backend/quiz/migrations/: 0002_userlevel.py
Backend/render/: render.yaml
Backend/users/: views.py
Frontend/: .env  index.html  package-lock.json  package.json  vite.config.ts
Frontend/src/: App.tsx  main.tsx
Frontend/src/assets/css/: style.css
Frontend/src/components/: Chatbot.tsx
Frontend/src/components/ui/: Input.tsx
Frontend/src/types/: index.ts
Frontend/src/utils/: AuthContext.tsx  Utils.ts  apiFetch.ts
Frontend/src/views/: Quiz.tsx  Topics.tsx
Frontend/src/views/auth/: ForgotPassword.tsx  Login.tsx  Registration.tsx  ResetPassword.tsx
backend/: asgi.py  settings.py  urls.py
quiz/: admin.py  ai_tutor.py  serializers.py  urls.py  views.py
quiz/migrations/: 0001_initial.py  0003_answer.py  0004_quiz_level.py  0005_alter_question_quiz.py
render/: render.yaml
users/: urls.py  views.py
